[package]
name = "ssd1675"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
description = "Driver for the SSD1675 e-Paper display (EPD) controller, for use with embedded-hal"

documentation = "https://docs.rs/ssd1675"
repository = "https://github.com/wezm/ssd1675"

readme = "README.md"
keywords = ["embedded", "epd", "epaper", "display", "ssd1675"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "wezm/ssd1675" }
codecov = { repository = "wezm/ssd1675" }

[dependencies]
libm = "0.2.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.embedded-graphics]
optional = true
version = "0.5.2"

[dependencies.linux-embedded-hal]
optional = true
version = "0.3.0"

[dependencies.profont]
optional = true
version = "0.3.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
examples = ["linux-embedded-hal", "profont"]

[[example]]
name = "raspberry_pi_inky_phat"
required-features = ["examples"]
